# spx

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  dev.sh  spawn.config.json  spx.config.json
.github/workflows/: release.yml
src/: cli.rs  config.rs  credentials.rs  docker.rs  error.rs  host.rs  lib.rs  main.rs  output.rs  templates.rs  ui.rs
src/cloud/: github.rs  mod.rs  stackauth.rs  vercel.rs
src/commands/: api.rs  claude.rs  deploy.rs  init.rs  kill.rs  link.rs  login.rs  mod.rs  new.rs  preview.rs  ps.rs  run.rs  shell.rs
src/docker/: container.rs  image.rs  mod.rs
src/runtime/: apple.rs  docker.rs  mod.rs
templates/nextjs/: .env.local.template  package.json
templates/nextjs/app/: layout.tsx  page.tsx
templates/nextjs/tests/: example.spec.ts
tests/: docker_e2e.rs  docker_not_running.rs  e2e_run_claude.rs  init_local.rs  link_gh_auth.rs  new_local.rs  run_cli.rs
