[package]
name = "spawn"
version = "0.1.0"
edition = "2021"
description = "CLI that fully sets up a project for agentic development with Claude Code"

[[bin]]
name = "spawn"
path = "src/main.rs"

[dependencies]
bollard = "0.18"
bytes = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
futures = "0.3"
include_dir = "0.7"
indicatif = "0.17"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[dev-dependencies]
mockall = "0.13"
