[package]
name = "spawn"
version = "0.1.1"
edition = "2024"
description = "CLI that fully sets up a project for agentic development"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "3"
which = "7"

[dev-dependencies]
tempfile = "3"
