[package]
name = "spx"
version = "0.1.3"
edition = "2024"
description = "Execute a FastAPI web server in an ephemeral deployment at a comparable speed to local interpreter run."

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "3"
petname = "2"
tar = "0.4"
flate2 = "1"
ureq = { version = "2", features = ["json"] }
dirs = "6"
open = "5"

[dev-dependencies]
tempfile = "3"
